# relecov-tools

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  extra_config.yaml  long_table_JSON_2022-05-31 14:52:03.933969.txt  pyproject.toml  relecov-tools  requirements.txt  setup.py  tox.ini
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: pypi_publish.yml  python_lint.yml  test_modules.yml  test_sftp_handle.yml  test_sftp_modules.yml  test_wrapper.yml
docs/: Metadata LAB.xlsx
example_data_ena/drag_and_drop/: ._uploader_tool_metadata_v5_genome_assemblies.xlsx  uploader_tool_metadata_v5_genome_assemblies.xlsx
example_data_ena/samples/: ._programmatic
relecov-tools/: owl_parsing.py  validation_jsons.py
relecov_tools/: SFTP_connection_class.py  __init__.py  __main__.py  base_module.py  bioinfo_metadata.py  build_schema.py  config_json.py  conversion_schema.py  create_xml.py  dataprocess_wrapper.py  download.py  download_manager.py  ena_upload.py  feed_database.py  feed_databases.py  gisaid_upload.py  json_schema.py  json_validation.py  launch_pipeline.py  list.py  log_summary.py  long_table_parse.py  mail.py  map.py  map_schema.py  metadata_homogeneizer.py  metadata_precheck.py  pipeline_manager.py  prueba.py  pruebas.ipynb  read_bioinfo_metadata.py  read_lab_metadata.py  read_metadata.py  rest_api.py  schema_json.py  sftp.py  sftp_client.py  sftp_handle.py  sftp_handled.py  sftp_report.py  (+8 more)
relecov_tools/assets/: Relecov_metadata_template_v2.0.11.xlsx  Relecov_metadata_template_v3.0.0.xlsx  Relecov_metadata_template_v3.0.2.xlsx  Relecov_metadata_template_v3.0.3.xlsx  Relecov_metadata_template_v3.0.5.xlsx  Relecov_metadata_template_v3.0.6.xlsx  Relecov_metadata_template_v3.0.7.xlsx  Relecov_metadata_template_v3.0.8.xlsx  Relecov_metadata_template_v3.0.9.xlsx  Relecov_metadata_template_v3.1.0.xlsx  Relecov_metadata_template_v3.1.1.xlsx  Relecov_metadata_template_v3.1.2.xlsx  Relecov_metadata_template_v3.1.4.xlsx  Relecov_metadata_template_v3.2.0.xlsx  Relecov_metadata_template_v3.2.1.xlsx  Relecov_metadata_template_v3.2.2.xlsx  Relecov_metadata_template_v3.2.3.xlsx  Relecov_metadata_template_v3.2.4.xlsx  compare_sampleids.sh  (+2 more)
schema/: ena_v01.json  gisaid_V0.json  phage_V0.json  phage_plus_V0.json
test/: mapping.py  mapping_V0.py  mapping_V2.py  my_test_file.xlsx  validation_jsons.py
tests/: template_config.yml  test_read_lab_metadata.py  test_sftp_handle.py  test_sftp_modules.py  test_sftp_report.py  test_upload_sftp.py  test_validate.py  test_wrapper_handle.py
(+183 files in other folders)
